<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    tools:context=".LoginActivity"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp" style="?android:attr/progressBarStyle"/>
    <ImageView
        android:id="@+id/angel_atas"
        android:layout_width="wrap_content"
        android:layout_height="208dp"
        android:layout_marginTop="-18dp"
        android:src="@drawable/angel_atas"/>
    <ImageView
        android:id="@+id/logo"
        android:layout_width="130dp"
        android:layout_height="110dp"
        android:layout_marginTop="-95dp"
        android:src="@drawable/logo"
        android:layout_below="@+id/angel_atas"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/tvSelamatDatang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="29dp"
        android:text="@string/selamat_datang"
        android:layout_below="@+id/relative"
        android:layout_marginStart="29dp"/>
    <EditText
        android:id="@+id/et_nisn"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="37dp"
        android:hint="@string/nisn"
        android:maxLength="10"
        android:drawableRight="@drawable/ic_person"
        android:drawablePadding="5dp"
        android:layout_below="@+id/logo"
        android:inputType="number"
        android:drawableEnd="@drawable/ic_person"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="37dp"
        android:layout_below="@+id/et_nisn">
        <EditText
            android:id="@+id/et_sandi"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/sandi"
            android:drawablePadding="5dp"
            android:layout_below="@+id/rl_password"
            android:inputType="textPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/btn_login_show"
        android:layout_width="25dp"
        android:layout_height="15dp"
        app:layout_constraintEnd_toEndOf="@+id/et_sandi"
        app:layout_constraintHorizontal_bias="0.98"
        app:layout_constraintStart_toStartOf="@+id/et_sandi"
        app:layout_constraintTop_toTopOf="@+id/et_sandi"
        app:layout_constraintVertical_bias="0.517"/>

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_password"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/btn_angel"
        android:text="@string/masuk"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btn_regist"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="261dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/btn_angel"
        android:text="Daftar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/angel_bawah"
        android:layout_width="match_parent"
        android:layout_height="177dp"
        android:layout_marginBottom="-18dp"
        android:src="@drawable/angel_bawah"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>
