<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl"
    android:background="@drawable/bg_angel"
    android:layout_width="match_parent"
    tools:context=".HomepageSiswa"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="49dp"
        android:text="@string/selamat_datang"
        android:layout_below="@+id/rl"
        android:layout_marginStart="49dp"
        tools:ignore="NotSibling" />

    <View
        android:id="@+id/btn_logout"
        android:backgroundTint="@color/white"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/ic_logout"
        tools:targetApi="lollipop"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        tools:ignore="InvalidId" />

    <ImageView
        android:layout_width="192dp"
        android:layout_height="117dp"
        android:layout_marginTop="49dp"
        android:layout_marginRight="29dp"
        android:src="@drawable/ic_atas"
        android:layout_below="@+id/rl"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/todo"
        android:layout_marginEnd="29dp"
        android:layout_alignParentEnd="true"
        tools:ignore="NotSibling" />
    <ScrollView
        android:background="@drawable/bg_angel_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/tv">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <GridLayout
                android:padding="10dp"
                android:paddingBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="2"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:alignmentMode="alignMargins"
                tools:ignore="UselessParent">
                <androidx.cardview.widget.CardView
                    android:id="@+id/siswa_btn_data_suara"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp" app:cardCornerRadius="12dp" app:cardElevation="6dp">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/bg_angel_menu_item_shadow"
                        android:padding="13dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:background="@drawable/bg_angel_menu_item_blue"
                            android:padding="10dp"
                            android:layout_width="120dp"
                            android:layout_height="85dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_suara"
                            android:contentDescription="@string/todo"/>
                        <TextView
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_suara"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/siswa_btn_data_siswa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp" app:cardCornerRadius="12dp" app:cardElevation="6dp">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/bg_angel_menu_item_shadow"
                        android:padding="13dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:background="@drawable/bg_angel_menu_item_blue"
                            android:padding="10dp"
                            android:layout_width="120dp"
                            android:layout_height="85dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_siswa"
                            android:contentDescription="@string/todo"/>
                        <TextView
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_siswa"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/siswa_btn_data_calon_ketua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp" app:cardCornerRadius="12dp" app:cardElevation="6dp">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/bg_angel_menu_item_shadow"
                        android:padding="13dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:background="@drawable/bg_angel_menu_item_blue"
                            android:padding="10dp"
                            android:layout_width="120dp"
                            android:layout_height="85dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_ketua"
                            android:contentDescription="@string/todo"/>
                        <TextView
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/data_calon_n_ketua_osis"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/siswa_btn_data_pembuat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:layout_marginBottom="30dp" app:cardCornerRadius="12dp" app:cardElevation="6dp">
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:background="@drawable/bg_angel_menu_item_shadow"
                        android:padding="13dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:background="@drawable/bg_angel_menu_item_blue"
                            android:padding="10dp"
                            android:layout_width="120dp"
                            android:layout_height="85dp"
                            android:layout_marginBottom="10dp"
                            android:src="@drawable/ic_pembuat"
                            android:contentDescription="@string/todo"/>
                        <TextView
                            android:textSize="12sp"
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/info_pembuat"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
