<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_tambah"
    android:layout_width="match_parent"
    tools:context=".TambahDataCalonKetuaActivity"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/tv"
        android:background="@color/white_trans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_kembali"
            android:background="@drawable/ic_back"
            android:layout_width="18dp"
            android:layout_height="12dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="39dp"
            android:layout_marginStart="32dp" app:backgroundTint="@color/black"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/data_calon_n_ketua_osis"
            android:layout_centerHorizontal="true"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv">
        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white_trans"
            android:paddingBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="21dp"
                android:text="@string/data_siswa"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                android:id="@+id/img_ketua"
                android:background="@drawable/bg_pilihpoto"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:text="@string/pilih_photo"
                android:contentDescription="@string/todo"/>
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="18dp"
                android:text="@string/nisn"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:textSize="14sp"
                android:id="@+id/et_nisn"
                android:background="@drawable/form_angel"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="4.6dp"
                android:layout_marginRight="34dp"
                android:hint="1101161096"
                android:maxLength="10"
                android:inputType="number"
                android:paddingStart="10dp"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="18dp"
                android:text="@string/nama"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:textSize="14sp"
                android:id="@+id/et_nama"
                android:background="@drawable/form_angel"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="4.6dp"
                android:layout_marginRight="34dp"
                android:hint="masukan nama"
                android:paddingStart="10dp"
                android:autofillHints=""
                android:inputType="text"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="18dp"
                android:text="No Urut"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:textSize="14sp"
                android:id="@+id/et_no_urut"
                android:background="@drawable/form_angel"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="4.6dp"
                android:layout_marginRight="34dp"
                android:hint="masukan no urut"
                android:inputType="number"
                android:paddingStart="10dp"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="18dp"
                android:text="Periode"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:textSize="14sp"
                android:id="@+id/et_periode"
                android:background="@drawable/form_angel"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="4.6dp"
                android:layout_marginRight="34dp"
                android:hint="Periode"
                android:inputType="number"
                android:paddingStart="10dp"
                android:autofillHints=""
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="18dp"
                android:text="Visi"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:textSize="14sp"
                android:gravity="top"
                android:entries="@array/list_kelas"
                android:id="@+id/et_visi"
                android:background="@drawable/form_angel"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="4.6dp"
                android:layout_marginRight="34dp"
                android:hint="visi"
                android:autofillHints=""
                android:inputType="text"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="18dp"
                android:text="Misi"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:textSize="14sp"
                android:gravity="top"
                android:entries="@array/list_kelas"
                android:id="@+id/et_misi"
                android:background="@drawable/form_angel"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="4.6dp"
                android:layout_marginRight="34dp"
                android:hint="misi"
                android:autofillHints=""
                android:inputType="text"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:textSize="14sp"
                android:textColor="@color/black"
                android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="18dp"
                android:text="Prestasi"
                android:paddingStart="10dp"
                android:layout_marginStart="34dp"
                tools:ignore="RtlSymmetry" />
            <EditText
                android:textSize="14sp"
                android:gravity="top"
                android:entries="@array/list_jk"
                android:id="@+id/et_prestasi"
                android:background="@drawable/form_angel"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="34dp"
                android:layout_marginTop="4.6dp"
                android:layout_marginRight="34dp"
                android:hint="prestasi"
                android:autofillHints=""
                android:inputType="text"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />
            <Button
                android:textColor="@color/white"
                android:layout_gravity="right"
                android:id="@+id/simpan"
                android:background="@drawable/btn_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:layout_marginRight="34dp"
                android:text="Simpan"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
